# 1Eg1TechPython

./: .replit  KartaPracy1.py  KartaPracy3.py  KartaPracy3a.py  KartaPracyNWD.py  PrzedSprNapisy.py  README.md  pyproject.toml
Algorytmy1/: dzielniczo-ujemne.py  euklidesModulo.py  euklidesOdej.py  nwwModulo.py  nwwOdej.py  pierwsze.py  ulamki1.py  ulamkiEgipskie.py
Algorytmy2/: reszta1.py  reszta2.py
KartyPracy/: KartaPracy2.py  KartaPracy3a.py  KartaPracy6.py  KartaPracy6a.py
Listy/: listy1.py  listy2.py
Napisy/: nap1.py  nap2.py
Pseudokod/: pseudo1.txt
Szyfrowanie/: Cezar.py  Huffman.py  OdwHuffman.py  rsa.py  test1.py
